# haskell_project_with_replit

./: .gitignore  .replit  Makefile  README.md  SETUP.md  cabal.project  haskell-library-manager.cabal  replit.nix
app/: Main.hs
